# velovi

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  readthedocs.yml  setup.py
.github/workflows/: release.yml  test.yml
docs/: conf.py  index.md  index.rst  installation.rst  references.bib  references.rst  tutorial.ipynb
docs/_static/css/: custom.css
docs/api/: index.md  index.rst
docs/extensions/: typed_returns.py
docs/release_notes/: index.rst  v0.1.0.rst
tests/: test_skeleton.py  test_velovi.py  test_velovi_jax.py
velovi/: __init__.py  _constants.py  _jax_model.py  _jax_module.py  _model.py  _module.py  _utils.py
